--- a/VR_Website.css
+++ b/VR_Website.css
@@ -1,31 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
 
+
 .logo_size {
     height: 50px;
     width: 70px;
 }
 
 #custom_nav_menu1 {
-    color: #323f4b;
-    font-family: 'Roboto';
+    color: black;
+    font-family: 'Robo';
+    font-weight: bold;
+    font-size: 20px;
+
 }
 
 #custom_nav_menu2 {
-    color: #323f4b;
-    font-family: 'Roboto';
+    color: black;
+    font-family: 'Robo';
+    font-weight: bold;
+    font-size: 20px;
 }
 
 #custom_nav_menu3 {
-    color: #323f4b;
-    font-family: 'Roboto';
+    color: black;
+    font-family: 'Robo';
+    font-weight: bold;
+    font-size: 20px;
 }
 
 #custom_nav_menu4 {
-    color: #323f4b;
-    font-family: 'Roboto';
+    color: black;
+    font-family: 'Robo';
+    font-weight: bold;
+    font-size: 20px;
 }
 
+#custom_nav_menu5 {
+    color: black;
+    font-family: 'Robo';
+    font-weight: bold;
+    font-size: 20px;
+}
+
+/*BANNER SECTION*/
 
 .banner_section_background_container {
     background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-banner-bg.png");
@@ -49,6 +67,31 @@
     background-color: #1a2137;
     border-width: 0px;
     border-radius: 5px;
+}
+
+.banner_section_model_title {
+    color: #d0b200;
+    font-weight: 800;
+    font-family: "Robo";
+}
+
+.banner_section_model_sub_title {
+    color: black;
+    font-family: "Roboto";
+    font-size: 15px;
+    text-align: left;
+}
+
+.banner_section_model_description {
+    color: #7b8794;
+    text-align: left;
+    font-size: 14px;
+
+}
+
+.banner_section_model_description_h1 {
+    color: black;
+    font-weight: 600;
 }
 
 /* FEATURES SECTION*/
