--- a/VR_Website.css
+++ b/VR_Website.css
@@ -7,39 +7,13 @@
     width: 70px;
 }
 
-#custom_nav_menu1 {
-    color: black;
-    font-family: 'Robo';
-    font-weight: bold;
-    font-size: 20px;
 
-}
 
-#custom_nav_menu2 {
-    color: black;
+#custom_nav_menu {
+    color: rgb(53, 53, 53);
     font-family: 'Robo';
-    font-weight: bold;
-    font-size: 20px;
-}
-
-#custom_nav_menu3 {
-    color: black;
-    font-family: 'Robo';
-    font-weight: bold;
-    font-size: 20px;
-}
-
-#custom_nav_menu4 {
-    color: black;
-    font-family: 'Robo';
-    font-weight: bold;
-    font-size: 20px;
-}
-
-#custom_nav_menu5 {
-    color: black;
-    font-family: 'Robo';
-    font-weight: bold;
+    font-weight: 600;
+    font-style: italic;
     font-size: 20px;
 }
 
@@ -119,7 +93,7 @@
     color: #1f2933;
 }
 
-.why_choose_us_section_card_description {
+.VR_website_features_section_card_description {
     color: #7b8794;
     font-size: 14px;
 }
@@ -129,6 +103,31 @@
     font-weight: bold;
     font-style: italic;
 }
+
+
+/* VR_video*/
+
+.detailed-view-card-text-container {
+    border-radius: 15px;
+    border-radius: 15px;
+}
+
+.detailed-view-card-heading {
+    font-size: 38px;
+    color: #1f2933;
+    font-family: "Roboto";
+    font-weight: bold;
+
+}
+
+.detailed-view-card-description {
+    color: #7b8794;
+    font-size: 14px;
+    font-family: "roboto";
+
+}
+
+
 
 /* CONTACT US SECTION*/
 
@@ -172,6 +171,10 @@
     border-width: 1px;
     padding: 5px;
     text-align: center;
+}
+
+.contact_details {
+    font-weight: bold;
 }
 
 
